# bqpp

./: .clang-format  CHANGELOG.md  CMake.md  CMakeLists.txt  CMakePresets.json  README.md  bqSdl.md  bqStd.md
.github/workflows/: c-cpp.yml
cmake/: CODE_COVERAGE.cmake  DOXYGEN_OPTIONS.cmake
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/bqDui/: CMakeLists.txt
src/bqSdl/: CMakeLists.txt  sdl.cpp  sdl.hpp
src/bqSdl/sdl/: Window.cpp  Window.hpp
src/bqStd/: CMakeLists.txt  SharedResource.hpp  build.hpp.in  std.cpp  std.hpp
tests/: CMakeLists.txt
tests/bqSdl/: CMakeLists.txt  testWindow.cpp
tests/bqStd/: CMakeLists.txt  testSharedResource.cpp
